작업 현황 업데이트

--- a/src/status.html
+++ b/src/status.html
@@ -322,7 +322,7 @@
 							<td>박지수</td>
 							<td>/reservation</td>
 							<td><a target="_blank" href="html/reservation/SCR_GA_RV_0206_T01.html">SCR_GA_RV_0206_T01.html</a></td>
-							<td class="stat">⚪</td>
+							<td class="stat">⚫</td>
 							<td class="date"></td>
 							<td></td>
 						</tr>
@@ -335,7 +335,7 @@
 							<td>박지수</td>
 							<td>/reservation</td>
 							<td><a target="_blank" href="html/reservation/SCR_GA_RV_0206_T02.html">SCR_GA_RV_0206_T02.html</a></td>
-							<td class="stat">⚪</td>
+							<td class="stat">⚫</td>
 							<td class="date"></td>
 							<td></td>
 						</tr>
@@ -348,7 +348,7 @@
 							<td>박지수</td>
 							<td>/reservation</td>
 							<td><a target="_blank" href="html/reservation/SCR_GA_RV_0206_T02_1.html">SCR_GA_RV_0206_T02_1.html</a></td>
-							<td class="stat">⚪</td>
+							<td class="stat">⚫</td>
 							<td class="date"></td>
 							<td></td>
 						</tr>
@@ -361,7 +361,7 @@
 							<td>박지수</td>
 							<td>/reservation</td>
 							<td><a target="_blank" href="html/reservation/SCR_GA_RV_0206_T03.html">SCR_GA_RV_0206_T03.html</a></td>
-							<td class="stat">⚪</td>
+							<td class="stat">⚫</td>
 							<td class="date"></td>
 							<td></td>
 						</tr>
@@ -374,7 +374,7 @@
 							<td>박지수</td>
 							<td>/reservation</td>
 							<td><a target="_blank" href="html/reservation/SCR_GA_RV_0206_T03_1.html">SCR_GA_RV_0206_T03_1.html</a></td>
-							<td class="stat">⚪</td>
+							<td class="stat">⚫</td>
 							<td class="date"></td>
 							<td></td>
 						</tr>
@@ -387,7 +387,7 @@
 							<td>박지수</td>
 							<td>/reservation</td>
 							<td><a target="_blank" href="html/reservation/SCR_GA_RV_0207_M01.html">SCR_GA_RV_0207_M01.html</a></td>
-							<td class="stat">⚪</td>
+							<td class="stat">⚫</td>
 							<td class="date"></td>
 							<td></td>
 						</tr>
@@ -400,7 +400,7 @@
 							<td>박지수</td>
 							<td>/reservation</td>
 							<td><a target="_blank" href="html/reservation/SCR_GA_RV_0207_M01_1.html">SCR_GA_RV_0207_M01_1.html</a></td>
-							<td class="stat">⚪</td>
+							<td class="stat">⚫</td>
 							<td class="date"></td>
 							<td></td>
 						</tr>
@@ -413,7 +413,7 @@
 							<td>박지수</td>
 							<td>/reservation</td>
 							<td><a target="_blank" href="components/popup_module.html#reservation#SCR_GA_RV_0208_M01#full">SCR_GA_RV_0208_M01.html</a></td>
-							<td class="stat">⚪</td>
+							<td class="stat">⚫</td>
 							<td class="date"></td>
 							<td></td>
 						</tr>
@@ -465,7 +465,7 @@
 							<td>박지수</td>
 							<td>/reservation</td>
 							<td><a target="_blank" href="components/popup_module.html#reservation#SCR_GA_RV_0212_M01">SCR_GA_RV_0212_M01.html</a></td>
-							<td class="stat">⚪</td>
+							<td class="stat">⚫</td>
 							<td class="date"></td>
 							<td></td>
 						</tr>
@@ -478,7 +478,7 @@
 							<td>박지수</td>
 							<td>/reservation</td>
 							<td><a target="_blank" href="components/popup_module.html#reservation#SCR_GA_RV_0213_M01">SCR_GA_RV_0213_M01.html</a></td>
-							<td class="stat">⚪</td>
+							<td class="stat">⚫</td>
 							<td class="date"></td>
 							<td></td>
 						</tr>
