--- a/src/html/reservation/SCR_GA_RV_0207_M01_1.html
+++ b/src/html/reservation/SCR_GA_RV_0207_M01_1.html
@@ -14,7 +14,7 @@
                 <div class="contents">
                     <div class="reservation">
                         <div class="cont membership">
-                            <div class="btn-area both-sides">
+                            <div class="btn-area both-sides mt60">
                                 <a href="#" class="btn-link">카드 신청</a>
                                 <a href="#" class="btn-link">비밀번호 등록/수정</a>
                             </div>
