--- a/src/html/reservation/SCR_GA_RV_0206_T02.html
+++ b/src/html/reservation/SCR_GA_RV_0206_T02.html
@@ -32,7 +32,7 @@
                                 </button>
                             </div>
                             <section class="section membership-info">
-                                <h3 class="section-title">할인</h3>
+                                <h3 class="section-tit">할인</h3>
                                 <div class="section-cont">
                                     <h4>최대 1만원/ 주 1회 할인적용</h4>
                                     <ul class="list sm">
