--- a/src/html/reservation/SCR_GA_RV_0206_T03_2.html
+++ b/src/html/reservation/SCR_GA_RV_0206_T03_2.html
@@ -51,8 +51,8 @@
                                 <div class="section-cont">
                                     <div class="ip-group">
                                         <div class="row">
-                                            <input type="text" placeholder="비밀번호 6자리" />
-                                            <button class="btn primary md"><span class="text">조회</span></button>
+                                            <input type="text" class="point-input" value="-0P"/>
+                                            <button class="btn primary md"><span class="text">전액사용</span></button>
                                         </div>
                                     </div>
                                 </div>
