--- a/src/status.html
+++ b/src/status.html
@@ -504,6 +504,19 @@
                         <tr>
                             <td></td>
                             <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td>박지수</td>
+                            <td>/reservation</td>
+                            <td><a target="_blank" href="html/reservation/SCR_GA_RV_0206_T03_2.html">SCR_GA_RV_0206_T03_2.html</a></td>
+                            <td class="stat">⚫</td>
+                            <td class="date"></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td></td>
                             <td>L.POINT</td>
                             <td></td>
                             <td></td>
@@ -523,6 +536,19 @@
                             <td>박지수</td>
                             <td>/reservation</td>
                             <td><a target="_blank" href="html/reservation/SCR_GA_RV_0207_M01_1.html">SCR_GA_RV_0207_M01_1.html</a></td>
+                            <td class="stat">⚫</td>
+                            <td class="date"></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td>박지수</td>
+                            <td>/reservation</td>
+                            <td><a target="_blank" href="html/reservation/SCR_GA_RV_0207_M01_2.html">SCR_GA_RV_0207_M01_2.html</a></td>
                             <td class="stat">⚫</td>
                             <td class="date"></td>
                             <td></td>
