--- a/src/status.html
+++ b/src/status.html
@@ -517,6 +517,19 @@
                         <tr>
                             <td></td>
                             <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td>박지수</td>
+                            <td>/reservation</td>
+                            <td><a target="_blank" href="html/reservation/SCR_GA_RV_0206_T03_3.html">SCR_GA_RV_0206_T03_3.html</a></td>
+                            <td class="stat">⚫</td>
+                            <td class="date"></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td></td>
                             <td>L.POINT</td>
                             <td></td>
                             <td></td>
