--- a/src/html/reservation/SCR_GA_RV_0206_T03_3.html
+++ b/src/html/reservation/SCR_GA_RV_0206_T03_3.html
@@ -33,7 +33,7 @@
                                     <div class="item">
                                         <p class="title">보유 포인트</p>
                                         <p class="desc">
-                                            <span class="value">1,000,000</span>
+                                            <span class="value">11,000,000</span>
                                             <span class="unit">P</span>
                                         </p>
                                     </div>
@@ -57,14 +57,33 @@
                                     </div>
                                 </div>
                             </section>
-                            <section class="section">
-                                <h3 class="section-tit">LITE 등급</h3>
+                            <section class="section point-use">
+                                <h3 class="section-tit">T멤버십 할인</h3>
                                 <div class="section-cont">
-                                    <h4>할인 및 적립이 불가능하며, T+포인트 사용만 가능</h4>
+                                    <input type="text" class="ip-txt disabled-point" value="할인불가 (주 4회 초과)" />
+                                </div>
+                            </section>
+                            <section class="section">
+                                <h3 class="section-tit">할인형</h3>
+                                <div class="section-cont">
+                                    <h4>최대 월 4회(1일~말일 기준), 회당 최대 1만원 할인</h4>
                                     <ul class="list sm">
-                                        <li>최초 T멤버십 사용 시 T멤버십 앱에서 비밀번호를 설정 후 사용 가능합니다.</li>
-                                        <li>비밀번호 불일치 일 5회, 누적 10회일 경우, T멤버십 앱에서 재인증 후 다시 입력해야 합니다.</li>
-                                        <li>T멤버십 (할인 ↔ 적립) 혜택 변경은 T멤버십 앱에서 변경하실 수 있습니다.</li>
+                                        <li>주중 대여요금의 20% 할인</li>
+                                        <li>주말/공휴일 대여요금의 10% 할인</li>
+                                        <li>Lite 등급의 경우 할인 불가</li>
+                                        <li>편도예약/반납연장 시 추가요금은 할인 제외</li>
+                                    </ul>
+                                </div>
+                            </section>
+                            <section class="section">
+                                <h3 class="section-tit">적립형</h3>
+                                <div class="section-cont">
+                                    <h4>최대 월 4회(1일~말일 기준), 회당 최대 1만원 적립</h4>
+                                    <ul class="list sm">
+                                        <li>주중 대여요금의 20% 할인</li>
+                                        <li>주말/공휴일 대여요금의 10% 할인</li>
+                                        <li>Lite 등급의 경우 할인 불가</li>
+                                        <li>편도예약/반납연장 시 추가요금은 할인 제외</li>
                                     </ul>
                                 </div>
                             </section>
