[혜택] -- 작업 중

--- a/src/html/benefit/SCR_GA_BN_0101_M01.html
+++ b/src/html/benefit/SCR_GA_BN_0101_M01.html
@@ -13,7 +13,84 @@
             <section id="container">
                 <div class="contents">
                     <div class="benefit">
-                       
+                        <div class="gc-tab">
+                            <ul>
+                                <li><a href="#" class="active">이벤트</a></li>
+                                <li><a href="#">쿠폰</a></li>
+                            </ul>
+                        </div>
+                        <div class="cont">
+                            <div class="gc-tab-type02">
+								<ul>
+									<li><a href="#" class="active">진행중</a></li>
+									<li><a href="#">종료</a></li>
+									<li><a href="#">당첨자</a></li>
+								</ul>
+								<span class="tab-indicator"></span>
+							</div>
+                            <div class="event-list">
+                                <div class="event-item">
+                                    <div class="img-area">
+                                        <img src="" alt="">
+                                    </div>
+                                    <div class="text-area">
+                                        <div class="tit-txt">
+                                            그린카 이용만 하면<br>참여완료!
+                                        </div>
+                                        <div class="effective-date">
+                                            <span class="date">2022.05.01 ~ 2022.05.31</span>
+                                            <span class="badge warning sm">D-7</span>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="event-item">
+                                    <div class="img-area">
+                                        <img src="" alt="">
+                                    </div>
+                                    <div class="text-area">
+                                        <div class="tit-txt">
+                                            차이카드 유저라면 그린카99%,<br>
+                                            전국 휴게소 할인
+                                        </div>
+                                        <div class="effective-date">
+                                            <span class="date">2022.05.01 ~ 2022.05.31</span>
+                                            <span class="badge normal sm">D-7</span>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="event-item">
+                                    <div class="img-area">
+                                        <img src="" alt="">
+                                    </div>
+                                    <div class="text-area">
+                                        <div class="tit-txt">
+                                            5월,<br>
+                                            그린카와 함께하는 혜택 모음.zip
+                                        </div>
+                                        <div class="effective-date">
+                                            <span class="date">2022.05.01 ~ 2022.05.31</span>
+                                            <span class="badge normal sm">D-7</span>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="event-item">
+                                    <div class="img-area">
+                                        <img src="" alt="">
+                                    </div>
+                                    <div class="text-area">
+                                        <div class="tit-txt">
+                                            그린카 멤버십 등급제<br>
+                                            리뉴얼 이벤트
+                                        </div>
+                                        <div class="effective-date">
+                                            <span class="date">2022.05.01 ~ 2022.05.31</span>
+                                            <span class="badge normal sm">D-7</span>
+                                        </div>
+                                    </div>
+                                </div>
+                                
+                            </div>
+                        </div>
                     </div>
                 </div>
             <!-- //container -->
