--- a/src/status.html
+++ b/src/status.html
@@ -726,10 +726,23 @@
                             <td>진행중</td>
                             <td>이벤트 진행중</td>
                             <td></td>
-                            <td></td>
+                            <td>박지수</td>
                             <td>/benefit</td>
                             <td><a target="_blank" href="html/benefit/SCR_GA_BN_0101_M01.html">SCR_GA_BN_0101_M01.html</a></td>
-                            <td class="stat"></td>
+                            <td class="stat">⚪</td>
+                            <td class="date"></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td>이벤트 진행중(No data)</td>
+                            <td></td>
+                            <td>박지수</td>
+                            <td>/benefit</td>
+                            <td><a target="_blank" href="html/benefit/SCR_GA_BN_0101_M01_01.html">SCR_GA_BN_0101_M01_01.html</a></td>
+                            <td class="stat">⚪</td>
                             <td class="date"></td>
                             <td></td>
                         </tr>
@@ -765,10 +778,10 @@
                             <td>상세</td>
                             <td>이벤트 상세</td>
                             <td></td>
-                            <td></td>
+                            <td>박지수</td>
                             <td>/benefit</td>
                             <td><a target="_blank" href="html/benefit/SCR_GA_BN_0104_M01.html">SCR_GA_BN_0104_M01.html</a></td>
-                            <td class="stat"></td>
+                            <td class="stat">⚪</td>
                             <td class="date"></td>
                             <td></td>
                         </tr>
@@ -778,10 +791,10 @@
                             <td>목록</td>
                             <td></td>
                             <td></td>
-                            <td></td>
+                            <td>박지수</td>
                             <td>/benefit</td>
                             <td><a target="_blank" href="html/benefit/SCR_GA_BN_0201_M01.html">SCR_GA_BN_0201_M01.html</a></td>
-                            <td class="stat"></td>
+                            <td class="stat">⚪</td>
                             <td class="date"></td>
                             <td></td>
                         </tr>
