[혜택] -- 작업 중

--- a/src/html/benefit/SCR_GA_BN_0101_M01.html
+++ b/src/html/benefit/SCR_GA_BN_0101_M01.html
@@ -60,7 +60,7 @@
                                 </div>
                                 <div class="event-item">
                                     <div class="img-area">
-                                        <img src="" alt="">
+                                        <img src="/images/dumm/dummy.png" alt="">
                                     </div>
                                     <div class="text-area">
                                         <div class="tit-txt">
