네이밍 규칙 아이콘 파일명 수정

--- a/src/html/reservation/SCR_GA_RV_0201_M01.html
+++ b/src/html/reservation/SCR_GA_RV_0201_M01.html
@@ -173,7 +173,9 @@
 							<div class="title-area">
 								<h3 class="title-md">대여예약 약관동의 (필수)</h3>
 							</div>
-							<div class="agreement">
+
+							<!-- 20220801 수정 -->
+							<div class="agree-group">
 								<div class="item check-all">
 									<label for="tmpCheckbook4" class="gc-checkbox round">
 										<input type="checkbox" id="tmpCheckbook4">
@@ -182,39 +184,48 @@
 								</div>
 								<div class="agree-module">
 									<div class="item active">
-										<a href="#">
+										<button type="button" class="btn-check">
 											<i class="ico ico-check md"></i>
+										</button>
+										<a href="#">
 											<span class="emp">필수</span>
 											<span class="text">자동차 대여약관에 대한 동의</span>
 											<i class="ico next-sm md"></i>
-										</a href="#">
+										</a>
 									</div>
 									<div class="item">
-										<a href="#">
+										<button type="button" class="btn-check">
 											<i class="ico ico-check md"></i>
+										</button>
+										<a href="#">
 											<span class="emp">필수</span>
 											<span class="text">차량대여 서비스를 위한 개인정보 수집/이용 동의</span>
 											<i class="ico next-sm md"></i>
-										</a href="#">
+										</a>
 									</div>
 									<div class="item">
-										<a href="#">
+										<button type="button" class="btn-check">
 											<i class="ico ico-check md"></i>
+										</button>
+										<a href="#">
 											<span class="emp">필수</span>
 											<span class="text">고유식별정보 수집에 대한 동의</span>
 											<i class="ico next-sm md"></i>
-										</a href="#">
+										</a>
 									</div>
 									<div class="item">
-										<a href="#">
+										<button type="button" class="btn-check">
 											<i class="ico ico-check md"></i>
+										</button>
+										<a href="#">
 											<span class="emp">선택</span>
 											<span class="text">개인정보 제3자 제공에 대한 동의</span>
 											<i class="ico next-sm md"></i>
-										</a href="#">
+										</a>
 									</div>
 								</div>
 							</div>
+							<!-- //20220801 수정 -->
 	
 							<div class="info-module">
 								<div class="title-area">
