--- a/src/status.html
+++ b/src/status.html
@@ -347,7 +347,7 @@
                             <td><a target="_blank" href="html/reservation/SCR_GA_RV_0201_M01.html">SCR_GA_RV_0201_M01.html</a></td>
                             <td class="stat">⚫</td>
                             <td class="compl">07-08</td>
-                            <td class="date"></td>
+                            <td class="date">20220801</td>
                             <td></td>
                         </tr>
                         <tr>
@@ -1190,9 +1190,10 @@
                             <td>유의사항</td>
                             <td></td>
                             <td></td>
-                            <td></td>
+                            <td>이민우</td>
                             <td>/mypage</td>
-                            <td><a target="_blank" href="html/.html">.html</a></td>
+							<td><a target="_blank" href="components/popup_module.html#mypage#SCR_GA_CI_0401_P04#full">SCR_GA_CI_0401_P04.html</a></td>
+                            <td class="stat">⚪</td>
                             <td class="stat"></td>
                             <td class="compl"></td>
                             <td class="date"></td>
