이용내역 > 이용내역서 -- 작업 중

--- a/src/status.html
+++ b/src/status.html
@@ -718,10 +718,10 @@
                             <td>이용내역서</td>
                             <td></td>
                             <td></td>
-                            <td></td>
+                            <td>박지수</td>
                             <td>/history</td>
-                            <td><a target="_blank" href="html/.html">.html</a></td>
-                            <td class="stat"></td>
+                            <td><a target="_blank" href="components/popup_module.html#history#SCR_GA_HS_0201_P01#full">SCR_GA_HS_0201_P01.html</a></td>
+                            <td class="stat">⚪</td>
                             <td class="compl"></td>
                             <td class="date"></td>
                             <td></td>
