혜택 > 쿠폰 -- 작업 중

--- a/src/html/benefit/SCR_GA_BN_0104_M01.html
+++ b/src/html/benefit/SCR_GA_BN_0104_M01.html
@@ -6,7 +6,25 @@
     <body>
         <div id="wrap">
             <!-- header -->
-            @@include('@@webRoot/include/header.html', { type: "sub_02", title: "이벤트" })
+            <!-- @@include('@@webRoot/include/header.html', { type: "sub_02", title: "이벤트" }) -->
+            <header id="header">
+                <div class="head-cont">
+                    <div class="head-wrap">
+                        <div class="head">
+                            <div class="left">
+                                <button type="button" class="btn-head">
+                                    <i class="ico back lg"></i>
+                                </button>
+                            </div>
+                            <h2 class="title">이벤트</h2>
+                            <div class="right">
+                                <button type="button" class="btn-head">
+                                    <i class="ico share lg"></i>
+                                </button>
+                            </div>
+                    </div>
+                </div>
+            </div></header>
             <!-- //header -->
 
             <!-- container -->
@@ -16,8 +34,7 @@
                        <div class="cont event-detail">
                         <div class="title-area">
                             <h3 class="title">
-                                5월, <br>
-                                그린카와 함께하는 혜택 모음.zip
+                                <한산: 용의 출현> 영화 예매권 이벤트 text text text text text text text text text text text text text text text
                             </h3>
                             <div class="effective-date">
                                 2022.04.01 ~ 2022.04.30
@@ -25,6 +42,80 @@
                         </div>
                         <div class="cont-area">
                             <div class="dummy-content">
+                            </div>
+                        </div>
+                        <div class="comment">
+                            <div class="comment-head">
+                                댓글<span class="count">1000</span>개
+                            </div>
+                            <div class="comment-write">
+                                <div class="row">
+                                    <textarea name="" id="" placeholder="댓글쓰기"></textarea>
+                                    <button class="btn lg">등록</button>
+                                </div>
+                            </div>
+                            <hr class="divider">
+                            <ul class="comment-list">
+                                <li class="comment-item">
+                                    <div class="comment-info">
+                                        <div class="left">
+                                        <span class="name">김*택</span>
+                                        <span class="date">2022.4.18 09:07</span>
+                                    </div>
+                                    <!-- <div class="right">
+                                        <button class="btn icon lg">
+                                            <i class="ico text-delete lg"></i>
+                                        </button>
+                                    </div> -->
+                                    </div>
+                                    <div class="comment-text">
+                                        <span>
+                                            진군하는 왜군을 상대로 조선을 지키기 위해 필사의 전략과 패기로 뭉친 이순신 장군과 조선 수군의 한산대첩을 어떻게 담아낼지 궁금하네요.
+                                        </span>
+                                    </div>
+                                </li>
+                                <li class="comment-item">
+                                    <div class="comment-info">
+                                        <div class="left">
+                                        <span class="name">홍*동</span>
+                                        <span class="date">2022.4.18 09:07</span>
+                                    </div>
+                                    <div class="right">
+                                        <button class="btn icon lg">
+                                            <i class="ico text-delete lg"></i>
+                                        </button>
+                                    </div>
+                                    </div>
+                                    <div class="comment-text">
+                                        <span>
+                                            감독님 전작인 명량 영화도 가족들이랑 관람하면서 인상깊게 관람했는데 역사책에서 본 내용을 영화로 볼수 있어 좋았습니다. 
+                                        </span>
+                                    </div>
+                                </li>
+                                <li class="comment-item">
+                                    <div class="comment-info">
+                                        <div class="left">
+                                        <span class="name">김*호</span>
+                                        <span class="date">2022.4.18 09:07</span>
+                                    </div>
+                                    <!-- <div class="right">
+                                        <button class="btn icon lg">
+                                            <i class="ico text-delete lg"></i>
+                                        </button>
+                                    </div> -->
+                                    </div>
+                                    <div class="comment-text">
+                                        <span>
+                                            역사를 배경소재로 하여 만들어진 역사, 드라마등 너무너무 다 잘 보고 있습니다~ 특히나 이순신 장군이라면 더더욱 영화관에서 보고 싶습니다...
+                                        </span>
+                                    </div>
+                                </li>
+                            </ul>
+                            <div class="btn-area">
+                                <button class="btn line full lg">
+                                    <span class="text">더보기</span>
+                                    <i class="ico more lg"></i>
+                                </button>
                             </div>
                         </div>
                        </div>
