--- a/src/html/benefit/SCR_GA_BN_0201_M01.html
+++ b/src/html/benefit/SCR_GA_BN_0201_M01.html
@@ -62,7 +62,7 @@
                                                 주중 주말 할인/1시간/차종 제한/지역제한</p>
                                             <div class="effective-date">
                                                 <span class="date">2022.04.01 ~ 2022.04.30</span>
-                                                <span class="badge warning sm">D-7</span>
+                                                <span class="badge pink sm">D-7</span>
                                             </div>
                                             <button class="btn icon md">
                                                 <i class="ico download lg"></i>
@@ -77,7 +77,7 @@
                                                 주중 주말 할인/1시간/차종 제한/지역제한</p>
                                             <div class="effective-date">
                                                 <span class="date">2022.04.01 ~ 2022.04.30</span>
-                                                <span class="badge normal sm">D-35</span>
+                                                <span class="badge green sm">D-35</span>
                                             </div>
                                         </div>
                                         <div class="coupon-item">
@@ -89,7 +89,7 @@
                                                 주중 주말 사용/차종제한/대여횟수 제한</p>
                                             <div class="effective-date">
                                                 <span class="date">2022.04.01 ~ 2022.04.30</span>
-                                                <span class="badge warning sm">D-7</span>
+                                                <span class="badge green sm">D-7</span>
                                             </div>
                                             <button class="btn icon md">
                                                 <i class="ico download lg"></i>
