--- a/src/html/history/SCR_GA_HS_0201_P01.html
+++ b/src/html/history/SCR_GA_HS_0201_P01.html
@@ -6,7 +6,7 @@
     <div class="layer-body">
         <h3 class="title">이용내역서</h3>
         <div class="pdf-viewer">
-            <iframe width="100%" height="100%" src="">pdf viewer area</iframe>
+            <iframe width="100%" height="100%" frameborder="0" src="http://docs.google.com/gview?embedded=true&url=YOUR_URL_HERE&amp;embedded=true">pdf viewer area</iframe>
         </div>
     </div>
     <div class="layer-footer">
