--- a/src/html/benefit/SCR_GA_BN_0101_M01.html
+++ b/src/html/benefit/SCR_GA_BN_0101_M01.html
@@ -39,7 +39,7 @@
                                         </div>
                                         <div class="effective-date">
                                             <span class="date">2022.05.01 ~ 2022.05.31</span>
-                                            <span class="badge warning sm">D-7</span>
+                                            <span class="badge pink sm">D-7</span>
                                         </div>
                                     </div>
                                 </div>
@@ -54,7 +54,7 @@
                                         </div>
                                         <div class="effective-date">
                                             <span class="date">2022.05.01 ~ 2022.05.31</span>
-                                            <span class="badge normal sm">D-7</span>
+                                            <span class="badge green sm">D-7</span>
                                         </div>
                                     </div>
                                 </div>
@@ -69,7 +69,7 @@
                                         </div>
                                         <div class="effective-date">
                                             <span class="date">2022.05.01 ~ 2022.05.31</span>
-                                            <span class="badge normal sm">D-7</span>
+                                            <span class="badge green sm">D-7</span>
                                         </div>
                                     </div>
                                 </div>
@@ -84,7 +84,7 @@
                                         </div>
                                         <div class="effective-date">
                                             <span class="date">2022.05.01 ~ 2022.05.31</span>
-                                            <span class="badge normal sm">D-7</span>
+                                            <span class="badge green sm">D-7</span>
                                         </div>
                                     </div>
                                 </div>
