혜택 > 쿠폰받기 > 쿠폰몰 -- 작업 중

--- a/src/status.html
+++ b/src/status.html
@@ -870,10 +870,10 @@
                             <td>쿠폰몰</td>
                             <td></td>
                             <td></td>
-                            <td></td>
+                            <td>박지수</td>
                             <td>/benefit</td>
                             <td><a target="_blank" href="html/benefit/SCR_GA_BN_0301_M01.html">SCR_GA_BN_0301_M01.html</a></td>
-                            <td class="stat"></td>
+                            <td class="stat">⚪</td>
                             <td class="compl"></td>
                             <td class="date"></td>
                             <td></td>
