--- a/src/status.html
+++ b/src/status.html
@@ -982,10 +982,10 @@
                             <td></td>
                             <td>마스터카드 쿠폰몰</td>
                             <td>마스터카드 회원 인증</td>
-                            <td></td>
+                            <td>박지수</td>
                             <td>/benefit</td>
                             <td><a target="_blank" href="html/benefit/SCR_GA_BN_0305_M01.html">SCR_GA_BN_0305_M01.html</a></td>
-                            <td class="stat"></td>
+                            <td class="stat">⚪</td>
                             <td class="compl"></td>
                             <td class="date"></td>
                             <td></td>
