혜택 > 쿠폰 > 쿠폰몰 목록 -- 작업 중

--- a/src/html/benefit/SCR_GA_BN_0301_M01.html
+++ b/src/html/benefit/SCR_GA_BN_0301_M01.html
@@ -34,41 +34,49 @@
                                 <div class="section-cont">
                                     <ul class="mall-list">
                                         <li class="item">
-                                            <div class="img">
-                                                <img src="/images/contents/lotte_ci.svg" alt="">
-                                            </div>
-                                            <div class="text">롯데 임직원 쿠폰몰</div>
-                                            <button class="btn icon lg">
-                                                <i class="ico arrow-right-nav050 md"></i>
-                                            </button>
+                                            <a href="#">
+                                                <div class="img">
+                                                    <img src="/images/contents/lotte_ci.svg" alt="">
+                                                </div>
+                                                <div class="text">롯데 임직원 쿠폰몰</div>
+                                                <button class="btn icon lg">
+                                                    <i class="ico arrow-right-nav050 md"></i>
+                                                </button>
+                                            </a>
                                         </li>
                                         <li class="item">
-                                            <div class="img">
-                                                <img src="/images/contents/housing.svg" alt="">
-                                            </div>
-                                            <div class="text">공공주택 입주민 쿠폰몰</div>
-                                            <button class="btn icon lg">
-                                                <i class="ico arrow-right-nav050 md"></i>
-                                            </button>
+                                            <a href="#">
+                                                <div class="img">
+                                                    <img src="/images/contents/housing.svg" alt="">
+                                                </div>
+                                                <div class="text">공공주택 입주민 쿠폰몰</div>
+                                                <button class="btn icon lg">
+                                                    <i class="ico arrow-right-nav050 md"></i>
+                                                </button>
+                                            </a>
                                         </li>
                                         <li class="item">
-                                            <div class="img">
-                                                <img src="/images/contents/mastercard_ci.svg" alt="">
-                                            </div>
-                                            <div class="text">마스터카드
-                                                쿠폰몰</div>
-                                            <button class="btn icon lg">
-                                                <i class="ico arrow-right-nav050 md"></i>
-                                            </button>
+                                            <a href="#">
+                                                <div class="img">
+                                                    <img src="/images/contents/mastercard_ci.svg" alt="">
+                                                </div>
+                                                <div class="text">마스터카드
+                                                    쿠폰몰</div>
+                                                <button class="btn icon lg">
+                                                    <i class="ico arrow-right-nav050 md"></i>
+                                                </button>
+                                            </a>
                                         </li>
                                         <li class="item">
-                                            <div class="img">
-                                                <img src="/images/contents/mnd_logo.svg" alt="">
-                                            </div>
-                                            <div class="text">국방부 쿠폰몰</div>
-                                            <button class="btn icon lg">
-                                                <i class="ico arrow-right-nav050 md"></i>
-                                            </button>
+                                            <a href="#">
+                                                <div class="img">
+                                                    <img src="/images/contents/mnd_logo.svg" alt="">
+                                                </div>
+                                                <div class="text">국방부 쿠폰몰</div>
+                                                <button class="btn icon lg">
+                                                    <i class="ico arrow-right-nav050 md"></i>
+                                                </button>
+                                            </a>
                                         </li>
                                     </ul>
                                 </div>
